@@ -1,3 +1,8 @@
+2007-08-17  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* interfaces/R/igraph/R/foreign.R (write.graph, write.graph.dot)
+	* interfaces/R/src/rinterface.c.in (R_igraph_write_graph_dot) : added	
+
 2007-08-16  Gabor Csardi  <csardi@belus>
 
 	* interfaces/R/src/rinterface.c.in (R_igraph_before, R_igraph_after)
